# agf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
homebrew/: agf.rb
src/: action.rs  cache.rs  config.rs  delete.rs  error.rs  fuzzy.rs  git.rs  list.rs  main.rs  model.rs  plugin.rs  settings.rs  shell.rs  stats.rs  watch.rs
src/scanner/: claude.rs  codex.rs  cursor.rs  cursor_agent.rs  gemini.rs  kiro.rs  mod.rs  opencode.rs  pi.rs
src/tui/: input.rs  mod.rs  render.rs
