[package]
name = "agf"
version = "0.8.0"
edition = "2021"
description = "AI Agent Session Finder TUI — find, resume, and manage Claude Code, Codex, OpenCode, Gemini, Kiro, pi, and Cursor CLI sessions"
license = "MIT"
repository = "https://github.com/subinium/agf"
keywords = ["tui", "cli", "ai", "agent", "claude"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
superlighttui = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
nucleo = "0.5"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rayon = "1"
unicode-width = "0.2"
toml = "0.8"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
strip = true
